--- a/src/main/java/GUI.form
+++ b/src/main/java/GUI.form
@@ -1309,12 +1309,13 @@
             <Component class="javax.swing.JComboBox" name="laskuDropDown">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="5">
-                    <StringItem index="0" value="Kaikki"/>
-                    <StringItem index="1" value="Maksamatta"/>
-                    <StringItem index="2" value="Muistutus"/>
-                    <StringItem index="3" value="Karhu"/>
-                    <StringItem index="4" value="Maksetut"/>
+                  <StringArray count="6">
+                    <StringItem index="0" value=" "/>
+                    <StringItem index="1" value="Kaikki"/>
+                    <StringItem index="2" value="Maksamatta"/>
+                    <StringItem index="3" value="Muistutus"/>
+                    <StringItem index="4" value="Karhu"/>
+                    <StringItem index="5" value="Maksetut"/>
                   </StringArray>
                 </Property>
               </Properties>
